added some styles

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
-<form action="/artist-search" method="GET">
-    <input type="search" name="artistName" placeholder="Enter Artist Name">
-    <button type="submit">Search for an Artist</button>
-</form>
+<div id="search-artist-div">
+    <h1>Spotify Clone</h1>
+    <form action="/artist-search" method="GET">
+        <input class="centered" type="search" name="artistName" placeholder="Enter Artist Name">
+        <button class="centered" type="submit">Search for an Artist</button>
+    </form>
+</div>
