--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,7 +1,7 @@
-{{#each albums}}
-<div>
+<div id="album-div">
+    {{#each albums}}
     <h3>{{name}}</h3>
     <img src="{{images.0.url}}">
     <a href="/tracks/{{id}}">View tracks</a>
+    {{/each}}
 </div>
-{{/each}}
