--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,9 +1,11 @@
 <ul>
     {{#each artists}}
-    <div>
+    <div id="artist-div">
+    
+    <img class="cover" src="{{images.0.url}}">
     <h3>{{name}}</h3>
-    <img src="{{images.0.url}}">
-    <a href="/albums/{{id}}">View albums</a>
+    <a id="view-albums" href="/albums/{{id}}">View albums</a>
     </div>
     {{/each}}
 </ul>
+
