--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -3,7 +3,7 @@
     <div class="section-div">
         <img class="cover" src="{{images.0.url}}">
         <h3>{{name}}</h3>
-        <a id="view-albums" href="/albums/{{id}}">View albums</a>
+        <a class="link" href="/albums/{{id}}">View albums</a>
     </div>
     {{/each}}
 </ul>
