--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,9 +1,9 @@
 <div class="page">
     {{#each albums}}
-    <div class="section-div">
+    <div id="section-div-test" class="section-div">
         <img class="cover" src="{{images.0.url}}">
         <h3>{{name}}</h3>
-        <a href="/tracks/{{id}}">View tracks</a>
+        <a class="link" href="/tracks/{{id}}">View tracks</a>
     </div>
     {{/each}}
 </div>
