--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,6 +1,6 @@
 <div class="page">
     {{#each albums}}
-    <div id="section-div-test" class="section-div">
+    <div class="section-div">
         <img class="cover" src="{{images.0.url}}">
         <h3>{{name}}</h3>
         <a class="link" href="/tracks/{{id}}">View tracks</a>
