--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,4 +1,4 @@
-<ul class="page">
+<div class="page">
     {{#each artists}}
     <div class="section-div">
         <img class="cover" src="{{images.0.url}}">
@@ -6,5 +6,5 @@
         <a class="link" href="/albums/{{id}}">View albums</a>
     </div>
     {{/each}}
-</ul>
+</div>
 
